# goit_h8_mongodb_redis_rabbitmq

./: .gitignore  README.md  cli_search.py  config.ini  connect.py  pyproject.toml  seed.py
part_I/: cli_search.py  connect.py  models.py  seed.py
part_II/: confirmation.py  consumer.py  consumer_email.py  consumer_phone.py  models.py  producer.py
