[tool.poetry]
name = "goit-h8-mongodb-redis-rabbitmq"
version = "0.1.0"
description = ""
authors = ["Paweł Szumański <pawel.szumanski@tuta.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.6.2"
mongoengine = "^0.27.0"
prompt-toolkit = "^3.0.43"
redis = "^5.0.1"
redis-lru = "^0.1.2"
pika = "^1.3.2"
faker = "^23.2.1"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
